unpackaged/main/default/objects/Community_Footer_Copyright_Area_Items__mdt/Community_Footer_Copyright_Area_Items__mdt.object-meta.xml
<CustomObject>
    <description>Stores the URL or text that is displayed in the copyright section of the footer area of the community, specific to each brand.</description>
    <label>Community Footer Copyright Area Items</label>
    <pluralLabel>Community Footer Copyright Area Items</pluralLabel>
</CustomObject>