unpackaged/main/default/objects/Community_Footer_Copyright_Area_Items__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <referenceTo>Webform_Brands__mdt</referenceTo>
    <relationshipLabel>Community Footer Copyright Area Items</relationshipLabel>
    <relationshipName>Community_Footer_Copyright_Area_Items</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>