unpackaged/main/default/objects/Community_Footer_Copyright_Area_Items__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>