unpackaged/main/default/objects/Community_Footer_Copyright_Area_Items__mdt/fields/Row_SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>Row_SequenceNo__c</fullName>
    <label>Row SequenceNo.</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>